<resources>
    <string name="app_name">Cacciatori Di Voti</string>
    <string name="tempoStr">Remaining time:</string>
    <string name="mapButtonStr">Map</string>
    <string name="gradesButtonStr">Grade Book</string>
    <string name="votoCatturatoStr">Grade captured!</string>
    <string name="corsoStr">Course:</string>
    <string name="creditiStr">CFU:</string>
    <string name="votoStr">Mark:</string>
    <string name="homeStr">home</string>
    <string name="dbError">Error On Opening .csv DB file</string>
    <string name="csvReadError">Error On Reading .csv DB file, try to reboot the App</string>
    <string name="coordsFileError">Error On Reading .txt coords file, try to reboot the App</string>
    <string name="dbCreation">Generating Data Base</string>
    <string name="dbCreated">Data Base has been created</string>
    <string name="dbPopulation">Populationg Data Base</string>
    <string name="dbPopulated">Data Base has been populated</string>
    <string name="coordsGenerateing">Generating coordinates</string>
    <string name="coordsGenerated">Coordinates generated</string>
    <string name="sharedGenerating">Generating SharedPreferences</string>
    <string name="noElementsInBooklet">Your booklet is empty :(</string>
    <string name="waitingServer">Waiting Response From Server</string>
    <string name="serverError">Unable to reach the server</string>
    <string name="sharedGenerated">SharedPreference generated</string>
    <string name="captTimeStr">Capture Time:</string>
    <string name="cantConnectStr">Can\'t connect to Server</string>
    <string name="classificaButtonStr">Standigs</string>
    <string name="nomeStudente">Students Name:</string>
    <string name="creditiOttenuti">Credits Earned:</string>
    <string name="materieOttenute">Passed Exams:</string>
    <string name="insert_name">Insert your name</string>
    <string name="hello">Welcome!</string>
    <string name="entryPointButton">I\'m Ready</string>
    <string name="welcomeMessage">Will you be able to graduate? \nEnter your data and find out</string>
    <string name="contentImage" translatable="false">logoUni</string>
    <string name="notificationText">"!! Don't miss it, run to catch it!!"</string>
    <string-array name="Degree">

        <item>Choose your Degree...</item>
        <item>Ingegneria informatica</item>
        <item>Economia</item>
        <item>Medicina</item>


    </string-array>
    <string name="notificationTitle">New Mark!!</string>
    <string name="votoNotArrStr">Grade not ready</string>
</resources>
