<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BookletActivity">

    <it.iCarrambaDT.cacciatoriDiVoti.customViews.MyTextView
        android:id="@+id/tvEsami"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/nomeStudente"
        android:textColor="@android:color/black"
        android:textSize="@dimen/datiBooklet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCrediti"
        tools:text="@string/" />

    <it.iCarrambaDT.cacciatoriDiVoti.customViews.MyTextView
        android:id="@+id/tvCrediti"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/creditiOttenuti"
        android:textColor="@android:color/black"
        android:textSize="@dimen/datiBooklet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStudente" />

    <it.iCarrambaDT.cacciatoriDiVoti.customViews.MyTextView
        android:id="@+id/tvEmptyBooklet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/noElementsInBooklet"
        android:textSize="@dimen/textViewEmptyDim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvBooklet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <it.iCarrambaDT.cacciatoriDiVoti.customViews.MyTextView
        android:id="@+id/tvStudente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/nomeStudente"
        android:textColor="@android:color/black"
        android:textSize="@dimen/datiBooklet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>